// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Transition /> should render correctly: Active 1`] = `
<div>
  <button>
    Toggle
  </button>
  <div
    class="transition-enter-active"
  >
    Animated text
  </div>
</div>
`;

exports[`<Transition /> should render correctly: Active 2`] = `
<div>
  <button>
    Toggle
  </button>
  <div
    class="transition-exit-active"
  >
    Animated text
  </div>
</div>
`;

exports[`<Transition /> should render correctly: Done 1`] = `
<div>
  <button>
    Toggle
  </button>
  <div
    class="transition-enter-done"
  >
    Animated text
  </div>
</div>
`;

exports[`<Transition /> should render correctly: Done 2`] = `
<div>
  <button>
    Toggle
  </button>
  <div
    class="transition-exit-done"
  >
    Animated text
  </div>
</div>
`;

exports[`<Transition /> should render correctly: Idle 1`] = `
<div>
  <button>
    Toggle
  </button>
</div>
`;
